post template added, years page added

--- a/pg-sd2/app/views/specific-year.pug
+++ b/pg-sd2/app/views/specific-year.pug
@@ -4,14 +4,16 @@ block content
 
     if data.length
         each post in data
-            b #{post.display_name} 
-            small #{post.username}
-            h2 #{post.Post_title}
-            p #{post.Full_text.substr(0,150)}... 
-            p Read more...
-            small Date posted: #{post.formatted_posted_date}
-            br
-            small Date of memory: #{post.formatted_memory_date}
-            hr
+            div 
+                a(href='/')
+                    b a(href='/profile/' + post.users_id) #{post.display_name} 
+                    small a(href='/profile/' + post.users_id) #{post.username}
+                    h2 #{post.Post_title}
+                    p #{post.Full_text.substr(0,150)}... 
+                    p Read more...
+                    small Date posted: #{post.formatted_posted_date}
+                    br
+                    small Date of memory: #{post.formatted_memory_date}
+                    hr
     else
         p No memories found for this year. Be the first to add one!
