--- a/pg-sd2/app/views/years.pug
+++ b/pg-sd2/app/views/years.pug
@@ -2,5 +2,9 @@ extends layout
 block content 
     h1 Years 
     ul 
-        li 
-            a(href='/2012') 2012
+        each year in allYears
+            li 
+                //- a(href='/2012') 2012
+
+                a(href=`/${year}`) #{year} 
+
