--- a/pg-sd2/app/views/profile.pug
+++ b/pg-sd2/app/views/profile.pug
@@ -1,3 +1,9 @@
 extends layout 
 block content 
     h1 Profile
+    h Display name 
+    p Username
+    h2 Bio 
+    h3 Posts 
+    p Post title 
+    p Likes 
