--- a/pg-sd2/app/views/post.pug
+++ b/pg-sd2/app/views/post.pug
@@ -1,3 +1,11 @@
 extends layout 
 block content 
-    h1 Post
+
+    h1 Hurricane Sandy 
+
+    p A devastating storm that hit the U.S. East coast in october 2012, This affected 
+    parts of canada and several carribean nations.Creating hybrid storm.
+
+
+    p Avy Ruslip
+    p @Avylip
