--- a/pg-sd2/app/views/post.pug
+++ b/pg-sd2/app/views/post.pug
@@ -1,22 +1,29 @@
-extends layout 
-block content 
+extends layout
 
-    b 
-        a(href=`/profile/${post.users_id}`) #{post.display_name} 
-    small 
-        a(href=`/profile/${post.users_id}`) #{post.username}
-    h2 #{post.Post_title}
-    p #{post.Full_text}
-    small Date posted: #{post.formatted_posted_date}
-    br
-    small Date of memory: #{post.formatted_memory_date}    
-    
-
-    //- h1 Hurricane Sandy 
-
-    //- p A devastating storm that hit the U.S. East coast in october 2012, This affected 
-    //- parts of canada and several carribean nations.Creating hybrid storm.
-
-
-    //- p Avy Ruslip
-    //- p @Avylip
+block content
+    // Show post only if it exists
+    if post
+        b 
+            a(href=`/profile/${post.Users_id}`) #{post.Display_name}
+        small 
+            a(href=`/profile/${post.Users_id}`) #{post.Username}
+        h2 #{post.Post_title}
+        p #{post.Full_text}           
+        small Date posted: #{post.formatted_posted_date}
+        br
+        small Date of memory: #{post.formatted_memory_date}
+    else if user
+        // If user exists but no post, show the form
+        h3 Add a Post
+        form(action="/post", method="POST")
+            input(type="hidden", name="Users_id", value=user.Users_id)
+            p
+                label Title:
+                input(type="text", name="Post_title", required)
+            p
+                label Content:
+                textarea(name="Full_text", rows="20", cols="60", required)
+            p
+                input(type="submit", value="Submit")
+    else
+        p You must be logged in to post.
