--- a/pg-sd2/app/views/index.pug
+++ b/pg-sd2/app/views/index.pug
@@ -1,5 +1,5 @@
 extends layout 
 block content 
-    h1 Home page
-    h2 Welcome To Capsule 
-    p Where you can post and view past events
+    h1.center-text WELCOME TO CAPSULE
+    p Capsule is a place where moments are preserved and memories come to life. Here at Capsule, you can create posts to capture your most important events, milestones, and experiences. You can also Browse through your past stories, revisit treasured memories, and keep your journey beautifully archived in one place. Start sharing today and watch your story unfold over time. Every memory matters.
+    
