--- a/pg-sd2/app/views/layout.pug
+++ b/pg-sd2/app/views/layout.pug
@@ -2,7 +2,7 @@ html
     head 
         title Capsule 
     body 
-        div   
+        div.navBar   
             h1 Capsule 
             ul     
                 li 
@@ -17,24 +17,25 @@ html
                         a(href='/login') Login
                     li 
                         a(href='/register') Register
+        
         style.
-            .center-text {
-                text-align: center;
-                margin-top: 50px;
-                font-size: 36px;
-                color: #333;
-            }
-            p {
-                text-align: center;
-                margin: 20px auto;
-                font-size: 24px;
-                color: #555;
-                line-height: 1.6;
-                width: 70%;
+
+            .navBar {
+                display: flex;
             }
             
+            .navBar ul {
+                display: flex;
+            }
 
+            li {
+                list-style-type: none;
+                text-decoration: none;
+            }
 
+            li a {
+                text-decoration: none;
+            }
                         
                     
                 
