--- a/pg-sd2/app/views/layout.pug
+++ b/pg-sd2/app/views/layout.pug
@@ -17,26 +17,34 @@ html
                         a(href='/login') Login
                     li 
                         a(href='/register') Register
-        
-        style.
 
+        style.
             .navBar {
                 display: flex;
+                align-items: center;
+                gap: 2rem;
+                justify-content: space-between;
             }
-            
+
+            .navBar h1 {
+                margin-top: 0px;
+                margin-bottom: 0px;
+            }
+
             .navBar ul {
                 display: flex;
+                gap: 1rem;
+                margin-right: 20px
+    
             }
 
             li {
                 list-style-type: none;
-                text-decoration: none;
             }
 
             li a {
                 text-decoration: none;
+                color: navy;
             }
-                        
-                    
-                
-        block content
+
+    block content
