--- a/pg-sd2/app/views/layout.pug
+++ b/pg-sd2/app/views/layout.pug
@@ -6,7 +6,7 @@ html
             h1 Capsule 
             ul     
                 li 
-                    a(href='/years') Years 
+                    a(href='/years') Browse years 
                 if loggedIn
                     li 
                         a(href=`/profile/${uid}`) My Account 
@@ -19,32 +19,58 @@ html
                         a(href='/register') Register
 
         style.
+            @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+            @import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
+
+            body {
+                background-color: #f5f5f5;
+                margin: 0 auto;
+            }
+
+            h1 {
+                font-family: "SUSE", sans-serif;
+            }
+
+            p {
+                font-family: "SUSE", sans-serif;
+            }
+
             .navBar {
                 display: flex;
                 align-items: center;
                 gap: 2rem;
                 justify-content: space-between;
+                background-color: #f5f5f5;
+                box-shadow: 0px 1px 10px #495ad1;
+                padding-left: 30px;
+                padding-right: 30px;
             }
 
             .navBar h1 {
                 margin-top: 0px;
                 margin-bottom: 0px;
+                font-family: "Audiowide", sans-serif;
+                color: #495ad1;
+                text-transform: uppercase;
             }
 
             .navBar ul {
                 display: flex;
                 gap: 1rem;
-                margin-right: 20px
     
             }
 
             li {
                 list-style-type: none;
+               padding-inline: 10px;
             }
 
             li a {
                 text-decoration: none;
-                color: navy;
+                color: #495ad1;
+                font-family: "SUSE", sans-serif;
+                font-weight: 600;
+                font-size: 16px;
             }
 
     block content
