--- a/pg-sd2/app/views/layout.pug
+++ b/pg-sd2/app/views/layout.pug
@@ -3,7 +3,8 @@ html
         title Capsule 
     body 
         div.navBar   
-            h1 Capsule 
+            h1 
+                a(href='/') Capsule 
             ul     
                 li 
                     a(href='/years') Browse years 
@@ -25,6 +26,7 @@ html
             body {
                 background-color: #f5f5f5;
                 margin: 0 auto;
+                padding-top: 80px;
             }
 
             h1 {
@@ -38,12 +40,13 @@ html
             .navBar {
                 display: flex;
                 align-items: center;
-                gap: 2rem;
                 justify-content: space-between;
                 background-color: #f5f5f5;
                 box-shadow: 0px 1px 10px #495ad1;
-                padding-left: 30px;
-                padding-right: 30px;
+                position: fixed;
+                top: 0;
+                width: 100vw;
+                z-index: 999;
             }
 
             .navBar h1 {
@@ -52,17 +55,20 @@ html
                 font-family: "Audiowide", sans-serif;
                 color: #495ad1;
                 text-transform: uppercase;
+                padding-left: 30px;
             }
 
             .navBar ul {
                 display: flex;
                 gap: 1rem;
+                padding-right: 30px
     
             }
 
             li {
                 list-style-type: none;
                padding-inline: 10px;
+
             }
 
             li a {
@@ -71,6 +77,11 @@ html
                 font-family: "SUSE", sans-serif;
                 font-weight: 600;
                 font-size: 16px;
+            }
+
+            .navBar a {
+                text-decoration: none;
+                color: #495ad1;
             }
 
     block content
