--- a/pg-sd2/app/views/register.pug
+++ b/pg-sd2/app/views/register.pug
@@ -1,13 +1,80 @@
 extends layout
 block content
-    h1 Register here
-    form(action='/set-password' method='POST')
-        label(for='username') Enter your username: 
-        input(name='username') 
-        label(for='display_name') Enter your display name: 
-        input(name='display_name') 
-        label(for='email') Enter your email: 
-        input(name='email') 
-        label(for='email') Enter your password: 
-        input(name='password' type = 'password')
-        input(type='submit' value='Submit')
+    div.registerForm
+        form(action='/set-password' method='POST')
+            label(for='username') Enter your username: 
+            <br>
+            input(name='username' type = 'text') 
+            <br>
+            label(for='display_name') Enter your display name: 
+            <br>
+            input(name='display_name' type = 'text') 
+            <br>
+            label(for='email') Enter your email: 
+            <br>
+            input(name='email' type = 'email') 
+            <br>
+            label(for='password') Enter your password: 
+            <br>
+            input(name='password' type = 'password')
+            <br>
+            input(type='submit' value='Join now!')
+        p Already have an account? 
+            a(href='/login') Login here.
+
+    
+    style. 
+        .registerForm {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 26vw;
+            //- height: 30vw;
+            //- margin-left: 37vw;
+            box-shadow: 1px 1px 5px #495ad1;
+            padding: 30px;
+            border-radius: 10px;
+            margin-top: 30px;
+        }
+
+        .registerForm label {
+            font-family: "SUSE", sans-serif;
+            font-size: 16px;
+            color: #495ad1;
+        }
+
+        .registerForm input[type="text"],
+        .registerForm input[type="email"],
+        .registerForm input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 1rem;
+            border: 1px solid #495ad1;
+            border-radius: 5px;
+            font-size: 14px;
+            font-family: "SUSE", sans-serif;
+        }
+
+        .registerForm input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            background-color: #495ad1;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-weight: bold;
+            font-size: 14px;
+            cursor: pointer;
+        }
+
+        .registerForm p {
+            padding-top: 10px;
+            color: #808080;
+            text-align: center;
+        }
+
+        .registerForm a {
+            text-decoration: none;
+            color: #495ad1;
+        }
