--- a/pg-sd2/app/views/layout.pug
+++ b/pg-sd2/app/views/layout.pug
@@ -84,4 +84,80 @@ html
                 color: #495ad1;
             }
 
+            .createPostButton {
+                position: fixed;
+                bottom: 30px;
+                right: 30px;
+                background-color: #495ad1;
+                color: white;
+                border-radius: 50%;
+                width: 60px;
+                height: 60px;
+                font-size: 36px;
+                font-weight: 600;
+                text-align: center;
+                line-height: 60px;
+                text-decoration: none;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                z-index: 999;
+            }
+
+            .loginMessage {
+                display: none;
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 30vw;
+                font-family: "SUSE", sans-serif;
+                font-weight: 400;
+                text-align: center;
+                background-color: #f5f5f5;
+                padding: 20px;
+                border: 2px solid #495ad1;
+                border-radius: 5px;
+                color: #495ad1;
+                z-index: 1000;
+            }
+
+            .loginMessage a {
+                color: #495ad1;
+                font-weight: 600;
+                text-decoration: none;
+            }
+
+            .closeButton {
+                background-color: #495ad1;
+                color: white;
+                font-family: "SUSE", sans-serif;
+                border-radius: 5px;
+                padding: 8px;
+                cursor: pointer;
+                font-weight: 600;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                border: none;
+
+            }
+
     block content
+
+    a.createPostButton(href=loggedIn ? "/post" : "#", onclick=loggedIn ? "" : "showLoginMessage()") +
+
+    div(class="loginMessage", id="loginMessage")
+        p Please 
+            a(href='/login') log in 
+            | or 
+            a(href='/register') create an account 
+            | to post.
+        button(class="closeButton", onclick="closeLoginMessage()") Go back
+
+    script.
+
+        function showLoginMessage() {
+            document.getElementById("loginMessage").style.display = "block";
+        }
+
+        function closeLoginMessage() {
+            document.getElementById("loginMessage").style.display = "none";
+        }
